Item240: easier vertical alignment of weblogos ("dummy proof"); fixed forgotten </div> in the meantime; and of course doc updates
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP@7441 a00a5322-12db-0310-a70b-8735589c885e

--- a/pub/TWiki/PatternSkin/layout.css
+++ b/pub/TWiki/PatternSkin/layout.css
@@ -73,11 +73,12 @@ html body {
 	width:100%;
 }
 
-/* setting the height of the top bar */
+/* height of the top bar */
 #patternLeftBar {
 	top:64px; /*C3*/
 }
-#patternTopBar {
+#patternTopBar,
+#patternTopBar table.patternTopBarContents {
 	height:64px; /*C3*/
 }
 
